Ajuste visual en ASC1 y ABC1

--- a/public/dusoft_duana/documentosbodegas/css/style.css
+++ b/public/dusoft_duana/documentosbodegas/css/style.css
@@ -57,3 +57,8 @@
     border-style :solid;
     border-width: thin
 }
+.ngHeaderContainer {
+    background: #337ab7;
+    color: #FFF;
+    border: #337ab7 !important;
+}
