--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -61,7 +61,7 @@
 </div>
 <hr>
 <div class="panel panel-primary" ng-repeat="server in monitoreo.servers track by $index">
-    <div class="panel-heading" style="background-color: #2a6da7;"><b style="font-size: 18px;">Server {{server}}</b></div>
+    <div class="panel-heading"><b style="font-size: 18px;">Server {{server}}</b></div>
     <div class="panel-body">
         <div class="row">
             <div class="col-sm-12">
