--- a/public/dusoft_duana/sistema/css/style.css
+++ b/public/dusoft_duana/sistema/css/style.css
@@ -49,7 +49,7 @@
     justify-content: space-between;
 }
 .contenedor-estadisticas > nvd3-line-chart > svg {
-    border: 2px solid #428aca;
+    border: 2px solid #6d91b1;
     border-radius: 30px;
     padding-right: 40px;
 }
