se agrega numero de bolsas

--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/salida.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/salida.html
@@ -1,4 +1,3 @@
-
 <div ng-controller="SalidaController">
     <div id="wrapper" class="container">
 
@@ -186,7 +185,8 @@
                                         <div class="panel-body">
                                             <label class="control-label" for="ciudades"> Ciudad: {{root.documentosPlanillas[0].ciudad}}</label><br>
                                             <label class="control-label" for="cajas"># Total Cajas: {{root.empaqueNumero.caja}}</label><br>
-                                            <label class="control-label" for="neveras"># Total Neveras: {{root.empaqueNumero.nevera}}</label>
+                                            <label class="control-label" for="neveras"># Total Neveras: {{root.empaqueNumero.nevera}}</label><br>
+                                            <label class="control-label" for="neveras"># Total Bolsas: {{root.empaqueNumero.bolsa}}</label>
                                         </div>
                                     </div>
                                 </div>
