Ajustes en Sincronizacion de documentos, NotasProveedores y sistema-monitoreo

--- a/public/dusoft_duana/sincronizacion/views/sincronizacionDocumentos/sincronizacionDocumentos.html
+++ b/public/dusoft_duana/sincronizacion/views/sincronizacionDocumentos/sincronizacionDocumentos.html
@@ -69,28 +69,28 @@
                                 <label  class="col-form-label pull-center">CABECERA</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Pefijo: {{encabezado.coddocumentoencabezado}}</label>
+                                <label  class="col-form-label">Pefijo: {{root.asientosContables.encabezado.coddocumentoencabezado}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Numero: {{encabezado.numerodocumentoencabezado}}</label>
+                                <label  class="col-form-label">Numero: {{root.asientosContables.encabezado.numerodocumentoencabezado}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Cod. Empresa: {{encabezado.codempresa}}</label>
+                                <label  class="col-form-label">Cod. Empresa: {{root.asientosContables.encabezado.codempresa}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Estado: {{encabezado.estadoencabezado}}</label>
+                                <label  class="col-form-label">Estado: {{root.asientosContables.encabezado.estadoencabezado}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">T. Tercero: {{encabezado.tipotercero}}</label>
+                                <label  class="col-form-label">T. Tercero: {{root.asientosContables.encabezado.tipotercero}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Documento: {{encabezado.identerceroencabezado}}</label>
+                                <label  class="col-form-label">Documento: {{root.asientosContables.encabezado.identerceroencabezado}}</label>
                             </div>  
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Fecha: {{encabezado.fecharegistroencabezado}}</label>
+                                <label  class="col-form-label">Fecha: {{root.asientosContables.encabezado.fecharegistroencabezado}}</label>
                             </div>
                             <div class="col-md-12 col-lg-12"> 
-                                <label  class="col-form-label">Observación: {{encabezado.observacionencabezado}}</label>
+                                <label  class="col-form-label">Observación: {{root.asientosContables.encabezado.observacionencabezado}}</label>
                             </div>                            
                         </div>
                         <hr>
@@ -104,7 +104,7 @@
                         <div class="row">    
                             <div class="col-md-12 col-lg-12">
                                 <a href="#" class="btn {{color_boton}} btn-lg" >
-                                    <span class="{{iconos}}"></span> {{root.asientosContables.descripcion}}
+                                    <span class="{{iconos}}"></span> {{root.asientosContables.encabezado.descripcion}}
                                 </a>
                                 <br>
                                 <br>
