--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -61,7 +61,7 @@
 </div>
 <hr>
 <div class="panel panel-primary" ng-repeat="server in monitoreo.servers track by $index">
-    <div class="panel-heading"><b style="font-size: 18px;">Server {{server}}</b></div>
+    <div class="panel-heading"><b style="font-size: 18px;">{{monitoreo.serversName[server]}}</b></div>
     <div class="panel-body">
         <div class="row">
             <div class="col-sm-12">
@@ -76,12 +76,21 @@
                         </div>
                         <div class="panel-body">
                             <div class="contenedor-modulos-btns">
-                                <button type="button" ng-disabled={{action.disable}} ng-repeat="action in monitoreo[server][modulo].actions track by $index" class={{action.class}} ng-click="sshConnection(modulo, action.name, server)"><i class="{{action.icono}}"></i> {{action.title}}</button>
+                                <div style="display: inline-block;" ng-click="btnAccion(modulo, btn, server)" ng-repeat="btn in monitoreo[server][modulo].actions track by $index" class={{btn.class}}>
+                                    <button type="button" ng-if="!btn.htmlPersonalizado" style="background: inherit; border: 0px;" ng-disabled="btn.disable"><i class="{{btn.icono}}"></i> {{btn.title}}</button>
+                                    <div ng-if="btn.htmlPersonalizado" class="form-group" style="background: inherit; border: 0px; margin-bottom: 0px; display: inline-block; margin-right: auto; margin-left: auto;">
+                                        <label class="sr-only" for="exampleInputAmount">Kill Process</label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon" style="background: #b7403c; color: #FFF;">Kill Process</div>
+                                            <input ng-model="nota.valorConcepto" type="number" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-number" id="exampleInputAmount" placeholder="Ingrese id" min="1" required>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <br>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <div class="col-sm-12 console-format">
+                                    <div class="col-sm-12 console-format" style="max-height: 370px; overflow-y: scroll;">
                                         <table class="{{monitoreo[server][modulo].tableClass}}" ng-repeat="obj in monitoreo[server][modulo].obj track by $index">  <!-- ng-repeat="(key, title) in modulo.obj track by $index" -->
                                             <tr style="height: 20px;">
                                                 <th colspan="100%" style="text-align: center; padding-top: 0px; padding-bottom: 6px; ">
@@ -89,13 +98,19 @@
                                                 </th>
                                             </tr>
                                             <tr>
-                                                <th class="header" ng-repeat="head in obj.header">
+                                                <th class="header" ng-repeat="head in obj.header track by $index">
                                                     {{head}}
                                                 </th>
                                             </tr>
                                             <tr ng-repeat="items in obj.rows track by $index">
-                                                <td ng-repeat="item in items track by $index">
+                                                <td ng-repeat="item in items track by $index" class="nowrap">
                                                     {{item}}
+                                                </td>
+                                                <td ng-if="modulo === 'POSTGRES' && items" class="normal">
+                                                    <p class="btn btn-danger custom-danger" ng-click="querysActiveInDb(modulo, 'killProcess', server, obj.header, items)">
+                                                        <i class="glyphicon glyphicon-stop"></i>
+                                                        <span>Stop</span>
+                                                    </p>
                                                 </td>
                                             </tr>
                                         </table>
