--- a/public/dusoft_duana/ordenescompra/views/genererarordenes/gestionarordenes.html
+++ b/public/dusoft_duana/ordenescompra/views/genererarordenes/gestionarordenes.html
@@ -7,7 +7,7 @@
                     <div class="col-sm-4">
                         <!--h3 class="text-left-responsive-center"><strong>Información Cliente</strong></h3-->
                     </div>
-                    <h3 class="text-center col-sm-4"  ><u><strong ng-bind="datos_view.usuario.getEmpresa().getCentroUtilidadSeleccionado().getBodegaSeleccionada().getNombre()"></u></strong></h3>
+                    <h3 class="text-center col-sm-4"  ><u><strong ng-bind="datos_view.usuario.getEmpresa().getCentroUtilidadSeleccionado().getBodegaSeleccionada().getNombre()"></strong></u></h3>
                     <div class="col-sm-4">
                         <h3 class="text-right-responsive-center"><strong>OC # {{ numero_orden }}</strong></h3>
 
