--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -90,7 +90,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <div class="col-sm-12 console-format" style="max-height: 370px; overflow-y: scroll;">
+                                    <div class="col-sm-12 console-format" style="max-height: 370px; overflow: auto;">
                                         <table class="{{monitoreo[server][modulo].tableClass}}" ng-repeat="obj in monitoreo[server][modulo].obj track by $index">  <!-- ng-repeat="(key, title) in modulo.obj track by $index" -->
                                             <tr style="height: 20px;">
                                                 <th colspan="100%" style="text-align: center; padding-top: 0px; padding-bottom: 6px; ">
