--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/CargarProductosBarranquilla.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/CargarProductosBarranquilla.html
@@ -51,20 +51,18 @@
 </div>
 <br>
 <div class="row">
-    <div class="row col-md-8 col-md-offset-2" style="margin-top: 25px">    
-
+    <div class="row col-md-8 col-md-offset-2" style="margin-top: 25px">
         <div flow-init="opciones_archivo"  flow-file-success="respuesta_archivo_plano($file, $message);" flow-file-added="!!{xls:1,xlsx:1}[$file.getExtension()]" flow-files-submitted="cargar_archivo_plano($flow)" class="ng-scope" flow-prevent-drop=""  flow-drag-enter="dropClass='drag-over'" flow-drag-leave="dropClass=''" >
             <div class="drop txt-center" flow-drop="" ng-class="dropClass" >
-
                 <div class="col-md-12">
                     <img  ng-hide="$flow.files.length" src="../../../images/Cloud-Upload-Blue.png" style="max-width: 200px; max-height: 150px; line-height: 20px; margin-bottom: 5px;"/>
                     <img ng-show="$flow.files.length" src="../../../images/xls.png" style="max-width: 200px; max-height: 150px; line-height: 20px; margin-bottom: 5px;"/>
                 </div>
                 <div ng-hide="$flow.files.length">
-                    Arrastrar y Soltar el archivo <b>AQUI</b>!!..                                                    
+                    Arrastrar y Soltar el archivo <b>AQUI</b>!!..
                 </div>
                 <div class="" ng-repeat="file in $flow.files" ng-show="$flow.files.length">
-                    Nombre Archivo : <label>{{file.name}}</label>   
+                    Nombre Archivo : <label>{{file.name}}</label>
 
                     <div class="progress progress-striped" ng-class="{active: file.isUploading()}">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
@@ -72,16 +70,14 @@
                         </div>
                         <span class="sr-only ng-binding">{{root.progresoArchivo}}% Completado</span>
                     </div>
-                </div> 
-            </div>
-
-            <br>
+                </div>
+            </div><br>
 
             <div class="well txt-center">
                 <span class="btn btn-default" flow-btn="" ng-hide="$flow.files.length" ng-disabled="validacion_buscar_productos() || Pedido.get_numero_pedido() > 0">
                     <span class="glyphicon glyphicon-folder-open" style="margin-right: 5px;"></span> Seleccionar Archivo
                     <input type="file" style="visibility: hidden; position: absolute;">
-                </span>                                                
+                </span>
                 <button class="btn btn-default" ng-click="$flow.cancel()" ng-disabled="" ng-show="$flow.files.length">
                     <span class="glyphicon glyphicon-minus" ></span> Remover
                 </button>
