--- a/public/dusoft_duana/documentosbodegas/views/index.html
+++ b/public/dusoft_duana/documentosbodegas/views/index.html
@@ -283,6 +283,17 @@
                        <br />
                        <br />
                     <div class="defaultGrid" ng-grid="listaDocumentos" > </div>
+                    
+                    <br />                    
+                    
+                     <div class="row text-center">
+                        <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaactual == 1" ng-click="paginaAnterior()">
+                            <span class="glyphicon glyphicon-chevron-left" ></span>
+                        </button>
+                        <button type="button" class="btn btn-default btn-medium" ng-disabled="items == 0" ng-click="paginaSiguiente()">
+                            <span class="glyphicon glyphicon-chevron-right" ></span>
+                        </button>
+                    </div>
                 </tab>                                
             </tabset>                                      
         </div>
